--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-MONGO_URI=mongodb+srv://examuser:examuser1234@examcluster.2klv7g3.mongodb.net/exam-platform?retryWrites=true&w=majority&appName=ExamCluster
+MONGO_URI=mongodb+srv://examuser:examuser1234@examcluster.2klv7g3.mongodb.net/exam-platform?retryWrites=true&w=majority
 PORT=5000
-JWT_SECRET=supersecretkey
+JWT_SECRET=YourSuperSecretKeyHere123!
